@@ -1,5 +1,10 @@
 require 'tax_cloud/responses/base'
+require 'tax_cloud/responses/generic'
 require 'tax_cloud/responses/ping'
 require 'tax_cloud/responses/verify_address'
 require 'tax_cloud/responses/cart_item'
 require 'tax_cloud/responses/lookup'
+require 'tax_cloud/responses/authorized'
+require 'tax_cloud/responses/authorized_with_capture'
+require 'tax_cloud/responses/captured'
+require 'tax_cloud/responses/returned'
